--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8080
 
 
 spring:
@@ -11,6 +11,11 @@ spring:
       url: jdbc:mariadb://web-study.csbruw3zvnas.ap-northeast-2.rds.amazonaws.com:3306/stussy-20220929-HDH
       username: HDH
       password: 1q2w3e4r!
+
+    security:
+      user:
+        name: HDH
+        password: 1234
 
 mybatis:
   mapper-locations:
