stussy-clonecoding study8

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,6 @@ spring:
 mybatis:
   mapper-locations:
     - /mappers/*.xml
+
+file:
+  path: C:\HDH\Back\springboot\stussy-clone-20220929-HDH/upload/
